# meowgl

./: .gitignore  CMakeLists.txt  Dockerfile  makefile
libs/cjson/: cJSON.c
res/: map.json  miku.mtl  shaders.glsl
src/: file_res.cpp  hardware.hpp  logging.hpp  main.cpp  render.cpp  render.hpp  render_utils.cpp  render_utils.hpp  shape.cpp  shape.hpp  state.hpp  utils.cpp  utils.hpp  wavefront.cpp  wavefront.hpp
src/platform/: desktop.cpp  web.cpp
